--- a/steps.org
+++ b/steps.org
@@ -40,37 +40,38 @@
   First install the [[https://github.com/moriyoshi/cyrus-sasl-xoauth2][xoauth2 sasl plugin]]. Then change the following lines in you mbsync configuration:
   #+begin_src
   ...
-  PassCmd oauth2ms
+  PassCmd "oauth2ms --auth-key AUTH_KEY --token-key TOKEN_KEY"
   AuthMechs XOAUTH2
   ...
   #+end_src
 * Emacs SMTP configuration
   The following code defines a new method to the authentication mechanisms of smtpmail emacs.
   #+begin_src emacs-lisp
-    ;;; Call the oauth2ms program to fetch the authentication token
-    (defun fetch-access-token ()
-      (with-temp-buffer
-	(call-process "oauth2ms" nil t nil "--encode-xoauth2")
-	(buffer-string)))
+        ;;; Call the oauth2ms program to fetch the authentication token
+        (defun fetch-access-token ()
+          (with-temp-buffer
+            (call-process "oauth2ms" nil t nil "--encode-xoauth2"
+                          "--auth-key" "AUTH_KEY" "--token-key" "TOKEN_KEY")
+            (buffer-string)))
 
-    ;;; Add new authentication method for xoauth2
-    (cl-defmethod smtpmail-try-auth-method
-      (process (_mech (eql xoauth2)) user password)
-      (let* ((access-token (fetch-access-token)))
-	(smtpmail-command-or-throw
-	 process
-	 (concat "AUTH XOAUTH2 " access-token)
-	 235)))
+        ;;; Add new authentication method for xoauth2
+        (cl-defmethod smtpmail-try-auth-method
+          (process (_mech (eql xoauth2)) user password)
+          (let* ((access-token (fetch-access-token)))
+            (smtpmail-command-or-throw
+             process
+             (concat "AUTH XOAUTH2 " access-token)
+             235)))
 
-    ;;; Register the method
-    (with-eval-after-load 'smtpmail
-      (add-to-list 'smtpmail-auth-supported 'xoauth2))
+        ;;; Register the method
+        (with-eval-after-load 'smtpmail
+          (add-to-list 'smtpmail-auth-supported 'xoauth2))
 
-    (setq message-send-mail-function   'smtpmail-send-it
-	  smtpmail-default-smtp-server "smtp.example.com"
-	  smtpmail-smtp-server         "smtp.example.com"
-	  smtpmail-stream-type  'starttls
-	  smtpmail-smtp-service 587)
+        (setq message-send-mail-function   'smtpmail-send-it
+              smtpmail-default-smtp-server "smtp.example.com"
+              smtpmail-smtp-server         "smtp.example.com"
+              smtpmail-stream-type  'starttls
+              smtpmail-smtp-service 587)
   #+end_src
 * Imap notify support
   The [[https://tools.ietf.org/html/rfc5465][Imap notify extension]] allows you to open an active connection to the imap
@@ -90,7 +91,7 @@
     exports.port = 993;
     exports.tls = true;
     exports.username = "EMAIL";
-    exports.xoauth2 = getStdout("oauth2ms --encode-xoauth2");
+    exports.xoauth2 = getStdout("oauth2ms --encode-xoauth2 --auth-key AUTH_KEY --token-key TOKEN_KEY");
     exports.onNewMail = "emacsclient -e '(mu4e-update-mail-and-index 1)'";
     exports.boxes = [ "INBOX"];
   #+end_src
